Add JWT. Add Cookie to keep session. Add Sign Up page. Add Sign In page. On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	new file:   .DS_Store
	modified:   .gradle/4.8/fileHashes/fileHashes.bin
	modified:   .gradle/4.8/fileHashes/fileHashes.lock
	modified:   .gradle/4.8/taskHistory/taskHistory.bin
	modified:   .gradle/4.8/taskHistory/taskHistory.lock
	modified:   .gradle/buildOutputCleanup/buildOutputCleanup.lock
	modified:   .idea/workspace.xml
	modified:   README.md
	deleted:    out/production/classes/gr/di/uoa/kk/databasesystems/RestControllers/AuthRestAPIs.class
	new file:   out/production/classes/gr/di/uoa/kk/databasesystems/RestControllers/NoAuthAPIs.class
	new file:   out/production/classes/gr/di/uoa/kk/databasesystems/RestControllers/ShowAuthViewsAPIs.class
	modified:   out/production/classes/gr/di/uoa/kk/databasesystems/RestControllers/StudentController.class
	modified:   out/production/classes/gr/di/uoa/kk/databasesystems/RestControllers/TestRestAPIs.class
	modified:   out/production/classes/gr/di/uoa/kk/databasesystems/security/JwtAuthEntryPoint.class
	modified:   out/production/classes/gr/di/uoa/kk/databasesystems/security/UserDetailsServiceImpl.class
	modified:   out/production/classes/gr/di/uoa/kk/databasesystems/security/WebSecurityConfig.class
	modified:   out/production/resources/application.properties
	modified:   out/production/resources/templates/layout/layout.html
	new file:   out/production/resources/templates/signin.html
	new file:   out/production/resources/templates/signup.html
	modified:   out/production/resources/templates/student.html
	new file:   src/.DS_Store
	new file:   src/main/.DS_Store
	deleted:    src/main/java/gr/di/uoa/kk/databasesystems/RestControllers/AuthRestAPIs.java
	new file:   src/main/java/gr/di/uoa/kk/databasesystems/RestControllers/NoAuthAPIs.java
	new file:   src/main/java/gr/di/uoa/kk/databasesystems/RestControllers/ShowAuthViewsAPIs.java
	modified:   src/main/java/gr/di/uoa

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -8,6 +8,7 @@
 
     <meta name="description" content="Student Information System demo using SpringBoot, ThymeLeaf, H2 database"></meta>
     <meta name="author" content="KK"></meta>
+
     <title>Student Information System demo</title>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -24,7 +25,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-
 </head>
 <body>
 <div class="container-fluid">
@@ -34,8 +34,12 @@
                 <a class="navbar-brand" href="#">Student Information System</a>
             </div>
             <ul class="navbar-nav nav">
-                <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="/student">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://spring.io/projects/spring-boot">About</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span><span th:text="${userName}">User</span></a></li>
+                <li><a href="/signOut"><span class="glyphicon glyphicon-log-out"></span> LogOut</a></li>
             </ul>
         </div>
     </nav>
